--- a/account_settings.ui
+++ b/account_settings.ui
@@ -6,22 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>430</width>
-    <height>430</height>
+    <width>412</width>
+    <height>332</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Account Settings</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(76, 76, 76);
-   font: 12pt &quot;Courier&quot;;</string>
+	<string notr="true">background-color: rgb(76, 76, 76);
+	font: 12pt "Courier";</string>
   </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>40</y>
+     <x>10</x>
+     <y>10</y>
      <width>391</width>
      <height>221</height>
     </rect>
@@ -30,8 +30,7 @@
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="styleSheet">
-       <string notr="true">color: rgb(248, 253, 253);
-	   font: 13pt &quot;Courier&quot;;</string>
+       <string notr="true">color: rgb(248, 253, 253);</string>
       </property>
       <property name="text">
        <string>Username:</string>
@@ -41,8 +40,7 @@
     <item row="1" column="0">
      <widget class="QLabel" name="label">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);
-	   font: 13pt &quot;Courier&quot;;</string>
+       <string notr="true">color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string>New Username:</string>
@@ -52,8 +50,7 @@
     <item row="2" column="0">
      <widget class="QLabel" name="label_2">
       <property name="styleSheet">
-       <string notr="true">color: rgb(250, 253, 253);
-	   font: 13pt &quot;Courier&quot;;</string>
+       <string notr="true">color: rgb(250, 253, 253);</string>
       </property>
       <property name="text">
        <string>Email:</string>
@@ -63,8 +60,7 @@
     <item row="4" column="0">
      <widget class="QLabel" name="label_4">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);
-	   font: 13pt &quot;Courier&quot;;</string>
+       <string notr="true">color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string>Old Password:</string>
@@ -74,8 +70,7 @@
     <item row="5" column="0">
      <widget class="QLabel" name="label_4">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);
-	   font: 13pt &quot;Courier&quot;;</string>
+       <string notr="true">color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string>New Password:</string>
@@ -85,8 +80,7 @@
     <item row="3" column="0">
      <widget class="QLabel" name="label_3">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);
-	   font: 13pt &quot;Courier&quot;;</string>
+       <string notr="true">color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string>Phone Number:</string>
@@ -96,8 +90,7 @@
     <item row="0" column="1">
      <widget class="QLineEdit" name="username_input">
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(255, 255, 255);
-	   font: 13pt &quot;Cambria&quot;;</string>
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string/>
@@ -144,16 +137,15 @@
   <widget class="QPushButton" name="save_changes">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>300</y>
+     <x>10</x>
+     <y>250</y>
      <width>121</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(86, 231, 115);
-	color: rgb(255, 255, 255);
-	font: 75 13pt &quot;Courier&quot;;</string>
+color: rgb(50, 50, 50);</string>
    </property>
    <property name="text">
     <string>Save</string>
@@ -162,17 +154,15 @@
   <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>360</y>
+     <x>10</x>
+     <y>290</y>
      <width>391</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(255, 0, 128);
-	color: rgb(255, 255, 255);
-	font: 75 13pt &quot;Courier&quot;;
-	</string>
+color: rgb(50, 50, 50);</string>
    </property>
    <property name="text">
     <string>Cancel</string>
@@ -181,16 +171,16 @@
   <widget class="QPushButton" name="leave_of_absence">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>300</y>
+     <x>140</x>
+     <y>250</y>
      <width>131</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(61, 229, 229);
-	color: rgb(255, 255, 255);
-	font: 75 13pt &quot;Courier&quot;;</string>
+color: rgb(50, 50, 50);
+</string>
    </property>
    <property name="text">
     <string>Group Absence</string>
@@ -199,16 +189,15 @@
   <widget class="QPushButton" name="present">
    <property name="geometry">
     <rect>
-     <x>290</x>
-     <y>300</y>
+     <x>280</x>
+     <y>250</y>
      <width>121</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(227, 201, 69);
-color: rgb(255, 255, 255);
-font: 75 13pt &quot;Courier&quot;;</string>
+color: rgb(50, 50, 50);</string>
    </property>
    <property name="text">
     <string>Present</string>
@@ -217,8 +206,8 @@ font: 75 13pt &quot;Courier&quot;;</string>
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>270</y>
+     <x>10</x>
+     <y>230</y>
      <width>391</width>
      <height>16</height>
     </rect>
