--- a/reset_password_window.ui
+++ b/reset_password_window.ui
@@ -20,10 +20,10 @@ font: 12pt &quot;Courier&quot;;</string>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>80</y>
-     <width>341</width>
-     <height>161</height>
+     <x>20</x>
+     <y>20</y>
+     <width>391</width>
+     <height>301</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
@@ -44,8 +44,7 @@ font: 12pt &quot;Courier&quot;;</string>
     <item row="2" column="0">
      <widget class="QLabel" name="label_3">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);
-font: 14pt &quot;Courier&quot;;</string>
+       <string notr="true">color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string>New Password:</string>
@@ -55,8 +54,7 @@ font: 14pt &quot;Courier&quot;;</string>
     <item row="0" column="0">
      <widget class="QLabel" name="label_2">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);
-font: 14pt &quot;Courier&quot;;</string>
+       <string notr="true">color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string>Username:</string>
@@ -73,8 +71,7 @@ font: 14pt &quot;Courier&quot;;</string>
     <item row="1" column="0">
      <widget class="QLabel" name="label_3">
       <property name="styleSheet">
-       <string notr="true">color: rgb(255, 255, 255);
-font: 14pt &quot;Courier&quot;;</string>
+       <string notr="true">color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string>Email:</string>
@@ -86,15 +83,14 @@ font: 14pt &quot;Courier&quot;;</string>
   <widget class="QPushButton" name="reset_button">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>260</y>
-     <width>111</width>
+     <x>20</x>
+     <y>320</y>
+     <width>181</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 14pt &quot;Courier&quot;;
-background-color: rgb(86, 231, 115);</string>
+    <string notr="true">background-color: rgb(86, 231, 115);</string>
    </property>
    <property name="text">
     <string>Reset</string>
@@ -103,15 +99,14 @@ background-color: rgb(86, 231, 115);</string>
   <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>260</y>
-     <width>111</width>
+     <x>220</x>
+     <y>320</y>
+     <width>191</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 14pt &quot;Courier&quot;;
-background-color: rgb(255, 0, 128);</string>
+    <string notr="true">background-color: rgb(255, 0, 128);</string>
    </property>
    <property name="text">
     <string>Cancel</string>
