--- a/account_settings.ui
+++ b/account_settings.ui
@@ -14,8 +14,8 @@
    <string>Account Settings</string>
   </property>
   <property name="styleSheet">
-	<string notr="true">background-color: rgb(76, 76, 76);
-	font: 12pt "Courier";</string>
+   <string notr="true">background-color: rgb(76, 76, 76);
+	font: 12pt &quot;Courier&quot;;</string>
   </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
@@ -207,7 +207,7 @@ color: rgb(50, 50, 50);</string>
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>230</y>
+     <y>226</y>
      <width>391</width>
      <height>16</height>
     </rect>
