--- a/friends_list.ui
+++ b/friends_list.ui
@@ -15,20 +15,20 @@
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(76, 76, 76);
-font: 12pt &quot;Courier&quot;;</string>
+font: 12pt "Courier";</string>
   </property>
   <widget class="QLabel" name="title">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>30</y>
-     <width>161</width>
+     <x>160</x>
+     <y>20</y>
+     <width>121</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(255, 255, 255);
-font: 14pt &quot;Courier&quot;;</string>
+font: 14pt "Courier";</string>
    </property>
    <property name="text">
     <string>MY FRIENDS</string>
@@ -37,14 +37,14 @@ font: 14pt &quot;Courier&quot;;</string>
   <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>300</y>
-     <width>91</width>
+     <x>50</x>
+     <y>370</y>
+     <width>101</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 13pt &quot;Courier&quot;;
+    <string notr="true">font: 13pt "Courier";
 background-color: rgb(61, 229, 229);</string>
    </property>
    <property name="text">
@@ -54,15 +54,15 @@ background-color: rgb(61, 229, 229);</string>
   <widget class="QPushButton" name="delete_friend">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>300</y>
-     <width>91</width>
+     <x>160</x>
+     <y>370</y>
+     <width>101</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 13pt &quot;Courier&quot;;
-background-color: rgb(255, 0, 128);</string>
+    <string notr="true">font: 13pt "Courier";
+background-color: rgb(227, 201, 69);</string>
    </property>
    <property name="text">
     <string>Delete</string>
@@ -72,8 +72,8 @@ background-color: rgb(255, 0, 128);</string>
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>300</y>
-     <width>91</width>
+     <y>370</y>
+     <width>111</width>
      <height>31</height>
     </rect>
    </property>
@@ -88,10 +88,10 @@ background-color: rgb(86, 231, 115);</string>
   <widget class="QListWidget" name="list_friends">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>60</y>
-     <width>281</width>
-     <height>181</height>
+     <x>50</x>
+     <y>50</y>
+     <width>331</width>
+     <height>271</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -101,9 +101,9 @@ background-color: rgb(86, 231, 115);</string>
   <widget class="QLineEdit" name="username_input">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>250</y>
-     <width>251</width>
+     <x>50</x>
+     <y>330</y>
+     <width>301</width>
      <height>30</height>
     </rect>
    </property>
@@ -114,14 +114,14 @@ background-color: rgb(86, 231, 115);</string>
   <widget class="QPushButton" name="add_friend">
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>250</y>
+     <x>350</x>
+     <y>330</y>
      <width>31</width>
      <height>30</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(204, 204, 204);</string>
+    <string notr="true">background-color: rgb(255, 128, 0);</string>
    </property>
    <property name="text">
     <string>+</string>
