--- a/suggested_time.ui
+++ b/suggested_time.ui
@@ -17,22 +17,12 @@
    <string notr="true">background-color: rgb(76, 76, 76);
 font: 12pt &quot;Courier&quot;;</string>
   </property>
-  <widget class="QLabel" name="title">
-   <property name="geometry">
-    <rect>
-     <x>90</x>
-     <y>10</y>
-     <width>91</width>
-     <height>20</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QPushButton" name="back_button">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>290</y>
-     <width>121</width>
+     <x>220</x>
+     <y>350</y>
+     <width>161</width>
      <height>31</height>
     </rect>
    </property>
@@ -47,9 +37,9 @@ background-color: rgb(255, 0, 128);</string>
   <widget class="QPushButton" name="select_time">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>290</y>
-     <width>121</width>
+     <x>50</x>
+     <y>350</y>
+     <width>161</width>
      <height>31</height>
     </rect>
    </property>
@@ -64,10 +54,10 @@ background-color: rgb(61, 229, 229);</string>
   <widget class="QListWidget" name="list_times">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>50</x>
      <y>70</y>
-     <width>281</width>
-     <height>201</height>
+     <width>331</width>
+     <height>271</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -77,7 +67,7 @@ background-color: rgb(61, 229, 229);</string>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>50</x>
+     <x>130</x>
      <y>30</y>
      <width>181</width>
      <height>31</height>
@@ -88,7 +78,7 @@ background-color: rgb(61, 229, 229);</string>
 font: 15pt &quot;Courier&quot;;</string>
    </property>
    <property name="text">
-    <string>   Suggested Times:</string>
+    <string>Suggested Times</string>
    </property>
   </widget>
  </widget>
