--- a/createevent.ui
+++ b/createevent.ui
@@ -40,7 +40,7 @@ background-color: rgb(86, 231, 115);</string>
      <x>20</x>
      <y>20</y>
      <width>391</width>
-     <height>261</height>
+     <height>251</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_2">
@@ -138,7 +138,7 @@ font: 12pt &quot;Courier&quot;;</string>
      <widget class="QLabel" name="label_2">
       <property name="styleSheet">
        <string notr="true">color: rgb(255, 255, 255);
-font: 9pt &quot;Sans Serif&quot;;</string>
+font: 12pt "Courier";</string>
       </property>
       <property name="text">
        <string>GMT:</string>
@@ -194,7 +194,7 @@ background-color: rgb(255, 0, 128);</string>
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>290</y>
+     <y>300</y>
      <width>201</width>
      <height>16</height>
     </rect>
@@ -211,7 +211,7 @@ font: 13pt &quot;Courier&quot;;</string>
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>290</y>
+     <y>300</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -231,7 +231,7 @@ font: 12pt &quot;Courier&quot;;</string>
    <property name="geometry">
     <rect>
      <x>260</x>
-     <y>330</y>
+     <y>340</y>
      <width>131</width>
      <height>21</height>
     </rect>
@@ -242,6 +242,32 @@ font: 12pt &quot;Courier&quot;;</string>
    </property>
    <property name="text">
     <string>Negotiable</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="suggest_time">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>330</y>
+     <width>191</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Suggest Time</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>280</y>
+     <width>391</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Horizontal</enum>
    </property>
   </widget>
  </widget>
