everything i looking good

--- a/schedulinggrid.ui
+++ b/schedulinggrid.ui
@@ -86,6 +86,9 @@ background-color: rgb(255, 0, 128);</string>
        <height>250</height>
       </rect>
      </property>
+	 <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
     </widget>
     <widget class="QListWidget" name="listWed">
      <property name="geometry">
@@ -95,6 +98,9 @@ background-color: rgb(255, 0, 128);</string>
        <width>61</width>
        <height>250</height>
       </rect>
+     </property>
+	 <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
      <property name="viewMode">
       <enum>QListView::ListMode</enum>
@@ -109,6 +115,9 @@ background-color: rgb(255, 0, 128);</string>
        <height>250</height>
       </rect>
      </property>
+	 <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
     </widget>
     <widget class="QListWidget" name="listThurs">
      <property name="geometry">
@@ -118,6 +127,9 @@ background-color: rgb(255, 0, 128);</string>
        <width>61</width>
        <height>250</height>
       </rect>
+     </property>
+	 <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
      <property name="mouseTracking">
       <bool>true</bool>
@@ -151,6 +163,9 @@ background-color: rgb(255, 0, 128);</string>
        <height>250</height>
       </rect>
      </property>
+	 <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
     </widget>
     <widget class="QListWidget" name="listTues">
      <property name="geometry">
@@ -160,6 +175,9 @@ background-color: rgb(255, 0, 128);</string>
        <width>61</width>
        <height>250</height>
       </rect>
+     </property>
+	 <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
     </widget>
     <widget class="QLabel" name="labelSunday">
@@ -219,6 +237,9 @@ background-color: rgb(255, 0, 128);</string>
        <height>250</height>
       </rect>
      </property>
+	 <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
     </widget>
     <widget class="QLabel" name="labelSaturday">
      <property name="geometry">
@@ -277,6 +298,9 @@ background-color: rgb(255, 0, 128);</string>
        <height>250</height>
       </rect>
      </property>
+	 <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
+     </property>
     </widget>
     <widget class="QListWidget" name="listSat_2">
      <property name="geometry">
@@ -286,6 +310,9 @@ background-color: rgb(255, 0, 128);</string>
        <width>61</width>
        <height>250</height>
       </rect>
+     </property>
+	 <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushRightW">
