added labels to these

--- a/reset_password_window.ui
+++ b/reset_password_window.ui
@@ -21,9 +21,9 @@ font: 12pt &quot;Courier&quot;;</string>
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>20</y>
+     <y>90</y>
      <width>391</width>
-     <height>301</height>
+     <height>211</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
@@ -110,6 +110,23 @@ font: 12pt &quot;Courier&quot;;</string>
    </property>
    <property name="text">
     <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>60</y>
+     <width>241</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+	 font: 16pt &quot;Courier&quot;;</string>
+   </property>
+   <property name="text">
+    <string>RESET YOUR PASSWORD</string>
    </property>
   </widget>
  </widget>
