--- a/create_account_window.ui
+++ b/create_account_window.ui
@@ -20,10 +20,10 @@ font: 12pt &quot;Courier&quot;;</string>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>70</y>
-     <width>361</width>
-     <height>181</height>
+     <x>20</x>
+     <y>100</y>
+     <width>391</width>
+     <height>201</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
@@ -104,9 +104,9 @@ font: 12pt &quot;Courier&quot;;</string>
   <widget class="QPushButton" name="create_button">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>290</y>
-     <width>141</width>
+     <x>20</x>
+     <y>310</y>
+     <width>191</width>
      <height>31</height>
     </rect>
    </property>
@@ -121,9 +121,9 @@ background-color: rgb(227, 201, 69);</string>
   <widget class="QPushButton" name="cancel_button">
    <property name="geometry">
     <rect>
-     <x>240</x>
-     <y>290</y>
-     <width>141</width>
+     <x>220</x>
+     <y>310</y>
+     <width>191</width>
      <height>31</height>
     </rect>
    </property>
@@ -133,6 +133,23 @@ background-color: rgb(255, 0, 128);</string>
    </property>
    <property name="text">
     <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>60</y>
+     <width>221</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+font: 16pt &quot;Courier&quot;;</string>
+   </property>
+   <property name="text">
+    <string>CREATE AN ACCOUNT</string>
    </property>
   </widget>
  </widget>
